# fx-mines

./: .gitignore  CMakeLists.txt  LICENSE.md  Mines.g1a  README.md
assets-fx/: fxconv-metadata.txt
assets-fx/ase/: font3x5.ase  icon.ase  icons.ase  mockup.ase  splash.ase  tiles.ase
src/: config.h  display.c  display.h  main.c  mines.c  mines.h
